--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         .wechat-page {
             position: fixed;
             top: 0; left: 0;
-            width: 100%; height: 100%;
+            width: 100vw; height: 100vh;
             background-color: #ffffff;
             z-index: 20;
             display: flex;
